# QCefView

./: .gitattributes  .gitignore  CMakeLists.txt  generate-win-mingw-x86_64.bat  readme.md  readme_build_mingw.md
cef_binary/: cef_binary_133.0.0+g2197e2d+chromium-133.0.6886.0_windows64.tar.bz2
example/QCefViewTest/: CMakeLists.txt  main.cpp
fix_mingw_patch/: CMakeLists.txt
fix_mingw_patch/cmake/: SetupMingw.cmake
fix_mingw_patch/example/QCefViewTest/: main.cpp
fix_mingw_patch/src/win/details/render/hardware/: DX11RenderBackend.cpp
include/: CefVersion.h
src/: CMakeLists.txt  QCefSetting.cpp
src/win/details/render/hardware/: DX11RenderBackend.cpp  DX11RenderBackend.h
